--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - '5432:5432'
     environment:
       - POSTGRES_DB=postgres
-      - POSTGRES_USER=InsaltZ123~1
+      - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=InsaltZ123~1
   envi:
     container_name: envi
