--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/postgres
   mosquitto:
     container_name: mosquitto
-    image: mosquitto
+    image: eclipse-mosquitto
     ports:
       - 1883:1883
       - 9001:9001
