--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,4 +30,4 @@ services:
       - ./config:/mosquitto/config
       - ./data:/mosquitto/data
       - ./log:/mosquitto/log
-    command: mosquitto -c /mosquitto/config/mosquitto.conf
+    command: mosquitto -c /config/mosquitto.conf
