--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - 1883:1883
       - 9001:9001
     volumes:
-      - ./config:/mosquitto/config
-      - ./data:/mosquitto/data
-      - ./log:/mosquitto/log
-    command: mosquitto -c /config/mosquitto.conf
+      - ./mosquitto/config
+      - ./mosquitto/data
+      - ./mosquitto/log
+    command: mosquitto -c mosquitto/config/mosquitto.conf
