--- a/config/mosquitto.conf
+++ b/config/mosquitto.conf
@@ -1,7 +1,7 @@
-allow_anonymous false
+allow_anonymous true
 listener 1883
 listener 9001
-protocol websockets
+protocol mqtt
 persistence true
 persistence_file mosquitto.db
 persistence_location /mosquitto/data/
