--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,6 @@ services:
       - 1883:1883
       - 9001:9001
     volumes:
-      - ./config
-      - ./data
-      - ./log
-    command: mosquitto -c config/mosquitto.conf
+      - ./mosquitto/data
+      - ./mosquitto/log
+    command: mosquitto -c mosquitto/config/mosquitto.conf
